feat: chay len cum trino